2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Trivially refactor.  Rename
	`get_delimited_name()` to `read_delimited_name()` because it
	does not retrieve a property; it advances the input stream
	pointer.  Update declaration and definition.
	(token::next): Update call site.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::is_usable_as_delimiter): Use
	new node token description member function.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Refactor new token description logic into its own
	function, since there is a second place it can be used.

	* src/roff/troff/token.h (class token): Declare new
	`describe_node()` member function.
	* src/roff/troff/input.cpp (token::description): Move the logic
	from here...
	(token::describe_node): ...to this new member function.
	(token::description): Call the new member function.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp
	(read_drawing_command)
	(do_device_extension)
	(do_register)
	(do_zero_width_output)
	(do_name_test)
	(do_bracket)
	(do_overstrike)
	(do_width)
	(read_size):
	Revise text of warnings in category "delim" thrown when an
	inauspicious delimiter is selected outside of compatibility
	mode.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (assign_control_character)
	(assign_no_break_control_character): Fix blunders in `assert()`
	usage.  I'm trying to make groff safe for builds using `NDEBUG`.
	That can't be achieved if we wrap substantive function calls (or
	expressions with side effects) with `assert()`.

	Continues commit e09bc6c083, 7 May 2023 (but not merged onto the
	master branch until after the groff 1.23.0 release).

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (assign_control_character)